<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hq.braintumorallianceapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_clearwater"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/Clearwater2016"
                    android:scaleType="centerCrop"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/cyclingvsrunning"
                    android:scaleType="centerCrop"
                    />
            </LinearLayout>

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|right"
                android:text="@android:string/ok"
                android:textSize="18sp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:clickable="true" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/where"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/where_ans"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/when"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/when_ans1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/when_ans2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/when_ans3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/pre_packet"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/pre_packet_ans1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/pre_packet_ans2"
            />
    </LinearLayout>
</LinearLayout>
